# karl

./: .env.example  .flake8  .gitignore  AUDIT_SUMMARY.md  LICENSE  README-3.md  README-AUDIT-1.md  README-SF-Fr.md  README-SF.md  README-fr.md  README.md  README_NEW.md  main.py  oldREADME.md  pyproject.toml  requirements.txt
AM-Linux-Core/: .flake8  .gitignore  README.md  letsgo.py
ARIANNA-CHAIN/: README.md
D2C/: README.md
GENESIS_orchestrator/: .gitignore  AGENTS.md  __init__.py  config.py  entropy.py  genesis_trainer.py  orchestrator.py  state.py  state_format.md  symphony.py  train.py
INDIANA_CHAIN/: README.md  generate.py  indiana_core.py
PITOMADOM/: README.md
artefacts/: Arianna Method 3.0.md  Arianna Method Companion.md  KARL-GPT-history01.md  KARL-GPT-histroy02.md  SUPPERTIME (v1.6).md  allowed_commands.json  genesis4-genesis5-concept.txt  letter-2-Indiana.md
cache/: context_neural_cache.db
config/: genesis.yaml
tests/: conftest.py  test_background_tasks.py  test_coder.py  test_coder_help_integration.py  test_complexity.py  test_config_env.py  test_context_neural_processor.py  test_dayandnight.py  test_emergency.py  test_filename.py  test_genesis2.py  test_genesis3.py  test_genesis_orchestrator.py  test_memory.py  test_ngram.py  test_rate_limit.py  test_rate_limiter.py  test_repo_monitor.py  test_retry.py  test_state.py  test_symphony.py  test_task_scheduler.py  test_terminal.py  test_tools.py  test_train_cpu.py  test_train_direct.py  test_vectorstore.py
utils/: __init__.py  aml_terminal.py  coder.py  complexity.py  config.py  dayandnight.py  (+23 more)
(+66 files in other folders)
