[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "indiana_am"
version = "0.1.0"
description = "Indiana AM core utilities"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["utils*", "GENESIS_orchestrator*"]

[tool.pytest.ini_options]
pythonpath = ["."]
